@@ -1223,3 +1223,8 @@ sstarted these clone on 12th of July, 2019
 [uuk]: MemoryError is handled now as an fatal error and will crash the game
 [uuk]: improved EntityModelGenerator code (issue 236)
 [uuk]: fixed rendering of chunks (issue 237)
+[uuk]: changed the events for reloading stuff
+[uuk]: models and block states are now reloaded by reload events
+[uuk]: recipe data & loot table data is now re-shuffled to prevent links to recipes not anymore loaded in the system
+[uuk]: loot tables are now also reloaded when entering /reload
+[uuk]: /reload will now NOT re-run data gens
